--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -23,7 +23,9 @@
 </a>
         <nav>
             <div class="header">
-                <div class="inline-block special-item"><a href="https://uxuicurriculum.wixsite.com/gulproast/about">About</a></div>
+                <div class="inline-block"><a href="index.html">Home</a></div>
+                <div class="inline-block special-item"><a href="about.html">About</a></div>
+                <div class="inline-block"><a href="products.html">Products</a></div>
                 <div class="inline-block"><a href="https://uxuicurriculum.wixsite.com/gulproast/locations">Location</a></div>
                 <div class="inline-block"><a href="https://uxuicurriculum.wixsite.com/gulproast/contact">Contact</a></div>
             </div>
@@ -51,7 +53,8 @@
   </div>
     </main>
     <footer>
-        <p>&copy; 2025 Gulp Roast Coffee. All rights reserved.</p>
+        <p>© edX Boot Camps LLC. This is not a coffee website. This is a fictitious company and scenario intended only for internal academic purposes.
+        </p>
     <div class="footer-container">
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
