--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
 <body>
   <header>
     <a href="index.html">
@@ -34,7 +34,7 @@
 <main>
     <section class="hero">
         <div class="hero-content">
-          <h2>There's nothing quite like enjoying that perfect cup of coffee.</h2>
+          <h2>Welcome to Gulp Roast Coffee</h2>
         </div>
       </section>
   
@@ -44,15 +44,16 @@
             <img src="images/gulp-coffee-closeup.jpg" alt="two people drinking coffee">
           </div>
           <div class="about-text">
-            <p>Our coffee brightens your days—one sip at a time.</p>
-            <p>Join us at our cafe, or order our beans online. Either way, you're bound to improve your day!</p>
+            <h1>There's nothing quite like enjoying that perfect cup of coffee.</h1>
+            <p>Our coffee brightens your days—one sip at a time. Join us at our cafe, or order our beans online. Either way, you're bound to improve your day!</p>
             <a href="products.html" class="cta-button">View our coffee</a>
           </div>
         </div>
     </div>
     </main>
     <footer>
-        <p>&copy;2025 Gulp Roast Coffee. All rights reserved.</p>
+        <p>© edX Boot Camps LLC. This is not a coffee website. This is a fictitious company and scenario intended only for internal academic purposes.
+        </p>
     <div class="footer-container">
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
