--- a/products.html
+++ b/products.html
@@ -12,10 +12,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -38,28 +38,26 @@
         <div class="product-item">
             <img src="images/gulp-coffee-beans.jpg" alt="coffee beans">
             <div class="description"></div>
-                <h2>Columbian-Blended Espresso Beans</h2>
+                <h1>Columbian-Blended Espresso Beans</h1>
                 <p>With our Columbian-Blended Espresso Beans, you can finally feel like a professional barista. Bright and clean with an intense burst of flavor, these full-bodied beans strike a perfect balance between the most delicate roasts and fruitful aromas.</p>
             </div>
         </div>
         <div class="product-item">
             <img src="images/gulp-espresso.jpg" alt="espresso drip">
             <div class="description"></div>
-                <h2>Triple-Blended Coffee Beans</h2>
+                <h1>Triple-Blended Coffee Beans</h1>
                 <p>Skillfully roasted and carefully blended, our Triple-Blended Coffee Beans don’t just wake you up in the morning, they pack a lasting punch that's sure to leave you wanting more. With silky smoothness and layered flavors, there’s really no better way to start your day.</p>
             </div>
         </div>
         <div class="product-item">
             <img src="images/gulp-pouring-coffee-horizontal-sm.jpg" alt="Pour over coffee">
             <div class="description"></div>
-                <h2>Lightly Roasted Coffee Beans</h2>
+                <h1>Lightly Roasted Coffee Beans</h1>
                 <p>Our Lightly Roasted Coffee Beans offer the world a chance to brighten every day with a whole lot of flavor and inspiration. Try these to receive the perfect balance between bold flavor and subtle sweetness.</p>
-            </div>
         </div>
-    </div> 
-</div>
     <footer>
-        <p>&copy; 2025 Gulp Roast Coffee. All rights reserved.</p>
+        <p>© edX Boot Camps LLC. This is not a coffee website. This is a fictitious company and scenario intended only for internal academic purposes.
+        </p>
     <div class="footer-container">
         <ul class="social-media">
             <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
